--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* ========================================
    PÁGINA PRINCIPAL - SECCIÓN HERO
 ======================================== */
+
+
 .hero-section {
     height: 100vh;
     background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../img/escuela.webp');
@@ -445,8 +447,44 @@
    RESPONSIVE DESIGN - INDEX
 ======================================== */
 
+/*1024px*/
+@media screen and (max-width: 1024px) {
+    
+    .school-name{
+        font-size:3rem ;
+    }
+
+    .school-subtitle{
+        font-size:1rem ;
+    }
+
+    .section-title{
+        font-size: 3rem;
+    }
+
+    .section-subtitle{
+        font-size:1rem ;
+
+    }
+
+    .content-overlay h3 {
+        font-size: 2rem;
+    }
+    .content-overlay p {
+        font-size: 1rem;
+    }
+
+}
+
+
 /* Tablets */
 @media screen and (max-width: 768px) {
+
+    #scrollArrow2,
+    #scrollArrow3,
+    #scrollArrow4 {
+        display: none;
+    }
     .school-name {
         font-size: 3rem;
     }
@@ -530,6 +568,8 @@
     .footer-bottom p {
         font-size: 0.85rem;
     }
+
+    
 }
 
 /* Móviles */
@@ -547,29 +587,41 @@
         padding: 0 15px;
     }
     
+    .parallax-section {
+        flex-direction: column;
+        height: 600px;
+        min-height: unset;
+    }
     .parallax-left,
     .parallax-right {
-        height: 45vh;
-        min-height: 350px;
-        padding: 30px 20px;
+        width: 100%;
+        height: 100%;
+        min-height: unset;
+        padding: 20px 10px;
+        align-items: center;
+        justify-content: center;
+    }
+    .content-overlay {
+        max-width: 100%;
+        padding: 0;
     }
     
     .section-title {
-        font-size: 2.2rem;
+        font-size: 1.8rem;
         line-height: 1.2;
     }
     
     .section-subtitle {
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
     
     .content-overlay h3 {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
         margin-bottom: 20px;
     }
     
     .content-overlay p {
-        font-size: 0.9rem;
+        font-size: 0.7rem;
         margin-bottom: 15px;
     }
     
