--- a/css/Style_especialidades.css
+++ b/css/Style_especialidades.css
@@ -83,9 +83,17 @@ body{
 .icono{
     width: 2.5rem;
     margin-left: 15px;
+    position: relative;
+    right: 5px;
 }
 
 .ejemplo2{
     width: 25rem;
     margin-left: 20px;
+}
+
+.boton_icon{
+ background-color: white;
+ border-radius: 100%;
+ border: none;
 }
