--- a/css/inscripciones.css
+++ b/css/inscripciones.css
@@ -819,13 +819,15 @@ h2 {
     }
     
     .subjects-list {
-        margin-top: 0.5rem;
+        margin-top: 1.5rem;
+
     }
     
     .subjects-list li {
         font-size: 0.75rem;
         padding: 6px 10px;
         margin: 0.15rem 0;
+        margin-top: 10px;
     }
     
     .subjects-buttons-container {
@@ -861,6 +863,10 @@ h2 {
     main {
         min-height: calc(100vh - 80px);
         padding: 10px;
+    }
+    .ag{
+        margin-left: 15px;
+        
     }
 }
 
@@ -944,13 +950,13 @@ h2 {
     }
     
     .subjects-list {
-        margin-top: 0.5rem;
+        margin-top: 1rem;
     }
     
     .subjects-list li {
         font-size: 0.7rem;
         padding: 5px 8px;
-        margin: 0.1rem 0;
+        margin: 2px;
     }
     
     .subjects-buttons-container {
