--- a/css/especialidades.css
+++ b/css/especialidades.css
@@ -1,7 +1,4 @@
-/* ===========================================
-   ESPECIALIDADES - TÉCNICA N° 1 VICENTE LÓPEZ
-   Estilos para la página de especialidades técnicas
-   =========================================== */
+@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
 * {
     box-sizing: border-box;
@@ -13,6 +10,209 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
+    position: relative;
+    min-height: 100vh;
+}
+
+/* ===========================================
+   FONDO ANIMADO CON PARTÍCULAS
+   =========================================== */
+.animated-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+}
+
+.circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.circles li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(0, 13, 255, 0.24);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+}
+
+.circles li:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+.circles li:nth-child(11) {
+    left: 5%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 8s;
+    animation-duration: 20s;
+}
+
+.circles li:nth-child(12) {
+    left: 90%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 5s;
+    animation-duration: 28s;
+}
+
+.circles li:nth-child(13) {
+    left: 15%;
+    width: 100px;
+    height: 100px;
+    animation-delay: 12s;
+    animation-duration: 16s;
+}
+
+.circles li:nth-child(14) {
+    left: 55%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 1s;
+    animation-duration: 30s;
+}
+
+.circles li:nth-child(15) {
+    left: 30%;
+    width: 45px;
+    height: 45px;
+    animation-delay: 6s;
+    animation-duration: 22s;
+}
+
+.circles li:nth-child(16) {
+    left: 80%;
+    width: 35px;
+    height: 35px;
+    animation-delay: 10s;
+    animation-duration: 26s;
+}
+
+.circles li:nth-child(17) {
+    left: 45%;
+    width: 18px;
+    height: 18px;
+    animation-delay: 3s;
+    animation-duration: 32s;
+}
+
+.circles li:nth-child(18) {
+    left: 95%;
+    width: 22px;
+    height: 22px;
+    animation-delay: 14s;
+    animation-duration: 19s;
+}
+
+.circles li:nth-child(19) {
+    left: 60%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 9s;
+    animation-duration: 24s;
+}
+
+.circles li:nth-child(20) {
+    left: 12%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 4s;
+    animation-duration: 38s;
+}
+
+@keyframes animate {
+    0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+    100% {
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
 }
 
 /* ===========================================
